Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -161,21 +161,11 @@
         </div>
         <div class="col-12 col-md-6 col-lg-3" id="proj" >
           <div class="card">
-            <img class="pro_img" src="image/WhatsApp Image 2025-10-10 at 19.04.56_119f4d4e.jpg" alt="">
-            <div class="overlay">
-              <h2 class="pname">project name</h2>
-              <p class="discription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus architecto,</p>
-              <a href="https://ahmed-ali0.github.io/Reveal-realestate/"><i class="fa-solid fa-eye"></i> Demo</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-12 col-md-6 col-lg-3" id="proj" >
-          <div class="card">
             <img class="pro_img" src="image/Reveal-Realstate.png" alt="">
             <div class="overlay">
               <h2 class="pname">Reveal Realstate</h2>
               <p class="discription">Your ideal partner for unparalleled real estate solutions.</p>
-              <a href=""><i class="fa-solid fa-eye"></i> Demo</a>
+              <a href="https://ahmed-ali0.github.io/Reveal-realestate"><i class="fa-solid fa-eye"></i> Demo</a>
             </div>
           </div>
         </div>
@@ -186,6 +176,16 @@
               <h2 class="pname">Zenzone</h2>
               <p class="discription">We provide workspaces, training halls, and workshops with online booking facilities.</p>
               <a href="https://zenzonehub.com"><i class="fa-solid fa-eye"></i> Demo</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3" id="proj" >
+          <div class="card">
+            <img class="pro_img" src="image/WhatsApp Image 2025-10-10 at 19.04.56_119f4d4e.jpg" alt="">
+            <div class="overlay">
+              <h2 class="pname">project name</h2>
+              <p class="discription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus architecto,</p>
+              <a href="https://ahmed-ali0.github.io/Reveal-realestate/"><i class="fa-solid fa-eye"></i> Demo</a>
             </div>
           </div>
         </div>
